--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,8 @@ body{
     font-size: 14px;
     background-color: #00f5fd;
 }
+/* Фракції: */
+.swiper-pagination-fraction {
+    color: blueviolet;
+    font-size: 20px;
+}
