--- a/css/style.css
+++ b/css/style.css
@@ -119,3 +119,28 @@ body{
     cursor: pointer;
     background-color: #08bc0e;
 }
+
+/* ========================================== */
+/* Передача керування: */
+.text-break {
+    font-size: 25px;
+    line-height: 150%;
+    color: #fefdfd;
+    margin: 50px 0;
+    background-color: #3e0079;
+    padding: 10px;
+}
+.text-slider {
+}
+.text-slider__wrapper {
+}
+.swiper-slide{
+    font-size: 25px;
+    line-height: 150%;
+    color: #000000;
+}
+.swiper-slide h2{
+    font-size: 40px;
+    font-weight: 700;
+    margin: 0px 0px 15px 0px;
+}
